--- a/src/main/resources/app1.json
+++ b/src/main/resources/app1.json
@@ -1,6 +1,6 @@
 {
   "host": "192.168.56.101",
   "port": 22,
-  "user": "satyajit",
-  "password": "admin"
+  "user": "cefalo",
+  "password": "cefalo"
 }
